<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Snake.io</string>
    <string name="score_label">SCORE</string>
    <string name="best_label">BEST</string>
    <string name="length_label">LEN</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="restart">重新开始</string>
    <string name="respawn">重开</string>
    <string name="settings">设置</string>
    <string name="profile">个人资料</string>
    <string name="trophy">排行榜</string>
    <string name="global_ranking">GLOBAL RANKING</string>
    <string name="sensor_active">方向</string>
    <string name="game_over">游戏结束</string>
    <string name="tap_to_start">触摸屏幕开始</string>
    <string name="tap_restart">触摸屏幕重新开始</string>
    <string name="hint_drag">拖动屏幕控制方向</string>
    <string name="skin_mint">薄荷皮肤</string>
    <string name="skin_candy">糖果皮肤</string>
    <string name="skin_paper">极简皮肤</string>
    <string name="skin_section">皮肤</string>
    <string name="skin_mint_label">薄荷</string>
    <string name="skin_candy_label">糖果</string>
    <string name="skin_paper_label">极简</string>
    <string name="gameplay_section">玩法</string>
    <string name="wrap_label">边缘穿越</string>
    <string name="wrap_hint">撞到边缘从对面穿出，不结束</string>
    <string name="done">完成</string>
</resources>
